--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             <img src="./ASSETS/ICONS/LOGOTEXTO.webp" alt="">
             <div id="navContainer">
                 <nav>
-                    <a href="#HOME">HOME</a>
-                    <a href="#SOBRENOSOTROS">SOBRE NOSOTROS</a>
+                    <a href="sobrenosotros.html">SOBRE NOSOTROS</a>
                     <a href="#VULNNEWS">VULN NEWS</a>
-                    <a href="#CONTACTO">CONTACTO</a>
+                    <a href="contacto.html">CONTACTO</a>
         
                 </nav>
             </div>
