--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li>c/Doctor Ornilla 2 48004 Bilbao</li>
                     <li>info.vulncorp@gmail.com</li>
-                    <li><a href="http://www.vulncorp.tx">Sitio web de Vuln Corp</a></li>
+                    <li><a href="http://www.vulnnews.tx">VulnNews</a></li>
                 </ul>
             </div>
            
