--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
             <img src="./ASSETS/ICONS/LOGOTEXTO.webp" alt="">
             <div id="navContainer">
                 <nav>
-                    <a href="/">HOME</a>
+                    <a href="index.html">HOME</a>
                     <a href="index.html#sobre-nosotros">SOBRE NOSOTROS</a>
                     <a href="index.html#VulnNews">VULN NEWS</a>
                     <a href="contacto.html">CONTACTO</a>
